# hwmon-gtk

./: Cargo.toml
src/: controller.rs  device.rs  fuse.rs  group.rs  main.rs  source.rs  update.rs  update_thread.rs
src/cpufreq/: core.rs  mod.rs
src/hwmon/: mod.rs  sensor.rs  sensor_type.rs
src/source/: mod.rs  read_into.rs
