[package]
name = "hwmon-gtk"
version = "0.1.0"
license = "WTFPL"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "^0.4", package = "gtk4", features = ["v4_6"] }
glib = "*"
once_cell = "1.13.0"
regex = "1.5.6"
#crossbeam-channel = "0.5"
#parking_lot = "0.10"